ajuste CertificateParser